# serde-bench

./: Cargo.toml  README.md
src/: lib.rs
