[package]
name = "serde-bench"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
"serde" = "*"
"serde_derive" = "*"

"byteorder" = "*"
"rmp" = "*"
"rmp-serde" = "*"
"bincode" = "*"
"serde_json" = "*"
"prost" = "*"
"prost-derive" = "*"
"bytes" = "*"
"serde-pickle" = "*"
"serde-xdr" = "*"
"serde_cbor" = "*"

"speedy" = {git = "https://github.com/merlleu/speedy"}
"speedy-derive" = {git = "https://github.com/merlleu/speedy"}

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
